tests/base/invalid/Assert_CompileFail_1.whiley
import whiley.lang.*:*

int f(int z):
    assert z
    return 0
